[project]
name = "pykwork"
version = "0.0.5"
description = "Simple async wrapper for kwork."
readme = "README.md"
requires-python = ">=3.7"
authors = [
    {name = "kesha1225"},
    {name = "iamlostshe", email = "vanamelcikov7275@gmail.com"},
]
dependencies = [
    "aiohttp>=3.8.6",
    "pydantic>=2.5.3",
    "websockets>=11.0.3",
]

[project.urls]
Homepage = "https://github.com/kesha1225/pykwork"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # Ошибки связанные с кирилицей
    "RUF001", "RUF002", "RUF003",

    # TODO
    "TD003", "FIX002",

    # Cравнение магических значений
    "PLR2004",

    # Работа с датой
    "DTZ005",
]
